MBA考生手机版修改

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
@@ -80,7 +80,7 @@
 						<p>本科专业类别*</p>
 						<div class="overhidden">
 							<select class="select_pros" id="TZ_COMMENT2" name="TZ_COMMENT2">
-								<option value="">请选择行业类别</option>
+								<option value="">请选择</option>
 								<option value="01">01-工科</option>
 								<option value="02">02-商科</option>
 								<option value="03">03-文科</option>
@@ -94,7 +94,7 @@
 						<div class="overhidden">
 							<select class="select_pros" id="TZ_HIGHEST_EDU"
 								name="TZ_HIGHEST_EDU">
-								<option value="">请选择行业类别</option>
+								<option value="">请选择</option>
 								<option value="D">博士</option>
 								<option value="S">硕士</option>
 								<option value="X">学士</option>
@@ -136,7 +136,7 @@
 						<p>公司性质*</p>
 						<div class="overhidden">
 							<select class="select_pros" id="TZ_COMMENT5" name="TZ_COMMENT5">
-								<option value="">请选择公司性质</option>
+								<option value="">请选择</option>
 								<option value="01">01-外资/合资企业</option>
 								<option value="02">02-自主创业</option>
 								<option value="03">03-国有企业</option>
