--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_CLASSSELECT_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_CLASSSELECT_HTML.html
@@ -4,7 +4,7 @@
       <div class="sq_pop_tit">%bind(:1)</div>
       %bind(:5)
       <div class="pop_btn">
-          <a href="javascript:void(0);" onclick='classSelectCancle()' class="pop_btn_left">%bind(:2)</a>
-          <a href="javascript:void(0);" onclick='addBmb("%bind(:4)")'  class="pop_btn_right">%bind(:3)</a>
+      	  <a href="javascript:void(0);" onclick='addBmb("%bind(:4)")'  class="pop_btn_left">%bind(:3)</a>
+          <a href="javascript:void(0);" onclick='classSelectCancle()' class="pop_btn_right">%bind(:2)</a> 
       </div>
   </div>
