MBA手机版修改

--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MCOMBOXR_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MCOMBOXR_HTML.html
@@ -1,6 +1,6 @@
 <div class="register_body">
 	<p>%bind(:1)%bind(:2)%bind(:5)</p>
-	<div class="overhidden">
+	<div class="overhidden" style="width:100%">
 		<select class="select_pros" id="%bind(:3)" name="%bind(:3)">
 			%bind(:4)
 		</select>		
