--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MFIELD_HTML3.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MFIELD_HTML3.html
@@ -1,6 +1,6 @@
 <div class="register_body">
 	<p>%bind(:1)%bind(:2)%bind(:7)</p>
-	<div class="overhidden" style="border-bottom: 1px solid #ddd;">
+	<div class="overhidden" style="border-bottom: 1px solid #ddd;width:100%">
 		<input type="text" id="%bind(:3)" name="%bind(:3)"
 			placeholder="%bind(:4)" />
 	</div>
