--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -670,6 +670,8 @@
 												var tzurl = "%bind(:22)";
 												if (tzurl != "") {
 													window.location.href = tzurl;
+												} else {
+													window.location.reload(); 
 												}
 											}
 											/*提交报名表 结束*/
