材料面试评审修改

--- a/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_CLMSPS_PW_DF_JSON_HTML.html
+++ b/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_CLMSPS_PW_DF_JSON_HTML.html
@@ -5,5 +5,7 @@
 	"pw_dfqk_grid_data":[%bind(:4)],
 	"pw_dfqk_chart_field":[%bind(:5)],
 	"pw_fbzb_grid":[%bind(:6)],
-	"pw_fbzb_grid_data":[%bind(:7)]
+	"pw_fbzb_grid_data":[%bind(:7)],
+	"pw_fbzb_sGrid":[%bind(:8)],
+	"pw_fbzb_sGridName":[%bind(:9)]
 }
