面试预约、活动报名发送站内信

--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
@@ -71,13 +71,13 @@ body, button, input, select, textarea {
 }
 
 .apply-items.inptype {
-	width: 320px; //
-	height: 18px;
-}
+	width: 320px; 
+	height: 29px;
+} 
 
 .apply-items.seltype {
 	width: 335px;
-	height: 49px;
+	height: 39px;
 }
 
 .apply-items:focus {
@@ -95,8 +95,12 @@ body, button, input, select, textarea {
 	position: relative;
 	line-height: 40px;
 	height: 40px;
+	background-color: #8f5dc0;
+	color:#fff;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
 }
-
+ 
 .apply-popbody {
 	padding: 60px 15px;
 	max-height: 325px;
@@ -108,17 +112,17 @@ body, button, input, select, textarea {
 	width: 600px
 }
 
-.apply-poptit .close {
-	float: right;
-	color: #999;
-	padding: 5px;
-	margin: -2px;
+.apply-poptit a.close {
+	float: right;   
+	color: #fff;
+	padding: 5px; 
+	margin: 5px; 
 	font: bold 18px/18px simsun;
-	text-shadow: 0 1px 0 #ddd
+	opacity: 1;
 }
 
-.apply-poptit .close:hover {
-	color: #444;
+.apply-poptit a.close:hover {
+	color: #aaa!important;
 }
 
 .apply-signin {
@@ -159,7 +163,7 @@ body, button, input, select, textarea {
 	width: 80px;
 	height: 40px;
 	line-height:40px;
-	border-radius: 2px;
+	border-radius: 5px;
 	cursor: pointer;
 	color: #FFF;
 	font-size: 14px;
@@ -168,35 +172,31 @@ body, button, input, select, textarea {
 }
 
 .apply-back {
-	background-color: #666;
-	border: 1px solid #999;
+	background-color: #f1c748;
 }
-
+ 
 .apply-back:hover {
-	background-color: #999
+	background-color: #f1c748;
 }
 
 .apply-submit {
 	background-color: #8f5dc0;
-	border: 1px solid #b7a5c6;
 }
 
 .apply-submit:hover {
-	background-color: #b7a5c6;
+	background-color: #8f5dc0;
 }
 
 .apply-popover {
 	z-index: 999999;
 	position: absolute;
-	top: 50%;
+	top: 50%; 
 	left: 50%;
 	width: 660px;
 	max-height: 519px;
 	margin: -180px 0 0 -330px;
-	border-radius: 5px;
-	border: solid 2px #666;
+	border-radius: 15px;
 	background-color: #fff;
-	box-shadow: 0 0 10px #666;
 }
 </style>
 
@@ -238,10 +238,10 @@ body, button, input, select, textarea {
 				%bind(:1)
 				</div>
 				<div class="apply-btn">
+					<input class="btn apply-submit" type="button" name="submit" 
+						value="%bind(:11)" onclick="tz_apply_float_iframe_submit();" />
 					<input class="btn apply-back" type="button" name="submit"
 						value="%bind(:10)" onclick="parent.tz_close_float_iframe_apply();" />
-					<input class="btn apply-submit" type="button" name="submit"
-						value="%bind(:11)" onclick="tz_apply_float_iframe_submit();" />
 				</div>
 			</form>
 		</div>
@@ -278,7 +278,7 @@ body, button, input, select, textarea {
 
 
 		function CheckMail(mail) {
-		 	var filter  = /^([a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(.[a-zA-Z0-9_-])+\.[a-zA-Z]{2,3}$/;
+		 	var filter  = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
 		 	if (filter.test(mail)){ 
 				return true;
 		 	}else{
