--- a/src/main/resources/html/TZWebSelectorBundle/TZ_CLASS_SELECT_HTML.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_CLASS_SELECT_HTML.html
@@ -84,8 +84,8 @@ a{text-decoration: none;}
       </div>
       %bind(:1)
       <div class="btn">
-      		<a href="#" class="btn_right" onclick="changeProvince();">%bind(:5)</a>
-      	  <a href="#" class="btn_left" onclick="closeThis();">%bind(:6)</a>
+      		<a href="#" class="btn_right" onclick="closeThis();">%bind(:6)</a>
+      	  <a href="#" class="btn_left" onclick="changeProvince();" >%bind(:5)</a>
       </div>
  </div>
 
