--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
@@ -78,9 +78,12 @@ var tzGeneralURL = "%bind(:1)";
 			var clickId = $("#ParamCon").val();
 			$("#" + clickId).val(countryDesc);
 			$("#" + clickId).attr("ccode",countryCode);
+			$("#" + clickId).html(countryDesc);
+			$("#" + clickId).css("color","#333");
+			
 			
 			//关闭窗口
-			returnResi();
+			//returnResi();
 			//closePop();
 		}
 	
@@ -134,6 +137,7 @@ var tzGeneralURL = "%bind(:1)";
 	<li onclick="setTab(5,this);" title="南美洲 South America">南美洲 South America</li>
 
 </ul>
+<a href="javascript:void(0)" class="login_btn" onclick="returnResi()" style="width:94%;position:fixed;bottom:2%;left:50%;margin:0 0 0 -47%;">确认</a>
 <div class="pop_chose">%bind(:4)</div>
 <ul id="selectorList" class="country_list"></ul>
 <input id="FanhuiValue2" type="hidden" />
