--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MSCHOOL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MSCHOOL_SELECT.html
@@ -91,11 +91,13 @@ var tzGeneralURL = "%bind(:1)";
 			var school = $(obj).attr("school");
 			//设置返回值
 			var clickId = $("#ParamCon").val();
-			$("#" + clickId).val(school);			
+			$("#" + clickId).val(school);
+			$("#" + clickId).html(school);
+			$("#" + clickId).css("color","#333");
 			/* //关闭窗口
 			closePop(); */
 			//返回
-			returnResi();
+			//returnResi();
 			//清华MBA
 			if((typeof changeImg)=="function"){
 				var successFlg = "F";		
@@ -160,8 +162,8 @@ var tzGeneralURL = "%bind(:1)";
 <div class="pop_search1">
 <input type="text" id="otherSchool" name="otherSchool" style="width: 86%; margin: 1% auto 4%; border: 1px solid #ddd; border-radius: 5px; text-indent: 8px;">
 <!-- <a href="javascript:void(0)"><i></i></a> -->
-<a href="#" class="login_btn" style="width:94%;position:fixed;bottom:2%;left:50%;margin:0 0 0 -47%;">确认</a>
-<input type="button" id="sureOtherSchool" name="sureOtherSchool" value="确认" style="width:42px;height:24px;border-radius:3px;background-color:#8f5dc0;text-align:center;margin-left:5px;margin-top:3px;" onclick="sureOther()"/>
+<a href="javascript:void(0)" class="login_btn" onclick="returnResi()" style="width:94%;position:fixed;bottom:2%;left:50%;margin:0 0 0 -47%;">确认</a>
+<!-- <input type="button" id="sureOtherSchool" name="sureOtherSchool" value="确认" style="width:42px;height:24px;border-radius:3px;background-color:#8f5dc0;text-align:center;margin-left:5px;margin-top:3px;" onclick="sureOther()"/> -->
 </div>		
 <input id="FanhuiValue2" type="hidden" />
 <input id="language" type="hidden" value="%bind(:5)"/>
