--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MSCHOOL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MSCHOOL_SELECT.html
@@ -103,7 +103,7 @@ var tzGeneralURL = "%bind(:1)";
 			/* //关闭窗口
 			closePop(); */
 			//返回
-			//returnResi();
+			returnResi();
 			//清华MBA
 			if((typeof changeImg)=="function"){
 				var successFlg = "F";		
