--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MPERFECT_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MPERFECT_HTML.html
@@ -15,11 +15,92 @@
 	src="%bind(:1)/statics/js/lib/layer/mobile/layer.js"></script>		
 <script type="text/javascript" src="%bind(:1)/statics/js/tranzvision/func/mperfect.js"></script>	
 <style>
-	.select_pros{
+.select_pros{
 		margin-top:2% !important;
 	}
+	#searchCountry{display:none;}
+	#searchSchool{display:none;}
+	.iScrollVerticalScrollbar {
+	position: absolute;
+	z-index: 9999;
+	width:6px;
+	bottom: 2px;
+	top: 2px;
+	right:3%;
+	overflow: hidden;
+}
+
+.iScrollVerticalScrollbar.iScrollBothScrollbars {
+	bottom: 18px;
+}
+
+.iScrollIndicator {
+	position: absolute;
+	background: #cc3f6e;
+	border-width: 1px;
+	border-radius: 8px;
+}
+.iScrollVerticalScrollbar .iScrollIndicator {
+	width: 100%;
+	background-color: #8f5dbf;
+}
+
+    .wrapper {
+	position: relative;
+	z-index: 1;
+	height: 190px;
+	overflow: hidden;
+}
+ .wrapper1 {
+	position: relative;
+	z-index: 1;
+	height: 190px;
+	overflow: hidden;
+}
+.scroller {
+	position: absolute;
+	z-index: 1;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	width: 100%;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+	-ms-text-size-adjust: none;
+	-o-text-size-adjust: none;
+	text-size-adjust: none;
+}
+.scroller1 {
+	position: absolute;
+	z-index: 1;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	width: 100%;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+	-ms-text-size-adjust: none;
+	-o-text-size-adjust: none;
+	text-size-adjust: none;
+}
 </style>
-<div class="viewport-adaptive">
+<div class="viewport-adaptive" id="before">
 	<div class="bg1">
 		<!-- 头部 -->
 		<div class="topbar">
@@ -58,7 +139,15 @@
 		<a href="javascript:void(0)" class="register_btn" id="submitbutton">补充个人信息</a>
 	</div>
 </div>
-<div class="shade"></div>
-<div class="country_pop" id="searchCountry"></div>
+<!-- <div class="shade"></div> -->
+<!-- <div class="shade"></div> -->
+<div class="viewport-adaptive" id="searchCountry"></div>
+<!-- <div class="country_pop" id="searchCountry"></div> -->
+	  <!-- 院校选择 -->
+ <div class="viewport-adaptive" id="searchSchool"></div>
+<!-- <div class="school_pop" id="searchSchool"></div> -->
+<div class="viewport-adaptive" id="searchState"></div>
+<!-- <div class="country_pop" id="searchState"></div> -->
+<!-- <div class="country_pop" id="searchCountry"></div>
 <div class="school_pop" id="searchSchool"></div>
-<div class="country_pop" id="searchState"></div>
+<div class="country_pop" id="searchState"></div> -->
