注册邮件变更确认邮件内容体修改

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_QUEREN_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_QUEREN_HTML.html
@@ -11,7 +11,7 @@
 <br />
 %bind(:2)<br/><br/>
 为了保障您账号的安全性，请在12小时内完成操作，此验证码将在您操作过一次后失效。<br/>
-注：这是系统发送的邮件，请勿回复。有任何疑问，欢迎发送邮件至创景咨询官方咨询邮箱admin_asst@tranzvision.com.cn<br/>
+注：这是系统发送的邮件，请勿回复。有任何疑问，欢迎发送邮件至mbaadmissions@sem.tsinghua.edu.cn<br/>
 </div>
 
 
