--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -1071,9 +1071,10 @@
 													var tzurl = "%bind(:22)";
 													if (tzurl != "") {
 														window.location.href = tzurl;
-													} else {
-														window.location.reload(); 
-													}
+													//推荐信不需要刷新
+													//} else {
+													//	window.location.reload(); 
+													//}
 												}
 											}
 										}
