活动报名修改

--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY_HEAD.html
@@ -44,6 +44,7 @@
 
 				if (result == "0") {
 					alert(resultDesc);
+					parent.tz_close_float_iframe_apply();
 				} else {
 					alert(resultDesc);
 					parent.tz_close_float_iframe_apply();
