--- a/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
+++ b/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
@@ -76,7 +76,7 @@
 		function vaildRegData(){
 			var isValid = true;
 			var mobelReg= /^1\d{10}$/;
-			var emailReg = /^([a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(.[a-zA-Z0-9_-])+\.[a-zA-Z]{2,3}$/;
+			var emailReg = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
 			
 			for(var key in itemsJson){
 				var val = $("#" + key).val();
@@ -99,7 +99,8 @@
 			if(isValid){
 				//验证邮箱格式
 				var phone = $("#TZ_ZY_SJ").val();
-				if(!mobelReg.test(phone)){
+				if(phone && mobelReg.test(phone)){
+				}else{
 					isValid = false;
 					$('#tz-reg-tip-display').html("手机号码不正确！");
 				}
@@ -108,7 +109,8 @@
 			if(isValid){
 				//验证邮箱格式
 				var email = $("#TZ_ZY_EMAIL").val();
-				if(!emailReg.test(email)){
+				if(email && emailReg.test(email)){
+				}else{
 					isValid = false;
 					$('#tz-reg-tip-display').html("邮箱地址不正确！");
 				}
