院校选择器

--- a/src/main/resources/html/TZWebSelectorBundle/TZ_SCHOOL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_SCHOOL_SELECT.html
@@ -7,8 +7,8 @@
 <script type="text/javascript">
 	var TzUniversityContextPath = "%bind(:2)";
 </script>
-
-<script type="text/javascript" src="%bind(:2)/statics/js/lib/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="%bind(:2)/statics/js/onlineSurvey/formvalidator/jquery-1.7.1.js"></script>
+<!-- <script type="text/javascript" src="%bind(:2)/statics/js/lib/jquery/jquery.min.js"></script> -->
 <script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
 <style type="text/css">
 		.autocomplete{
@@ -402,7 +402,7 @@
  <!--  <div class="search_right">
 	 <a href="#" id="search" class="alpha" onclick="findData();" > <img src="%bind(:3)/search_bt.png" width="40" height="39"/></a></div>
  </div> -->
-<div class="city_main_title2"><span class="font_gray_16px_s">如果搜索不到相应学校，请点击其他学校或境外学校输入对应的学校</span></div>
+<div class="city_main_title2"><span class="font_gray_16px_s">如果搜索不到相应学校，请点击其他学校输入对应的学校</span></div>
   <div class="city_main_title3" id="tab1">
       <div class="float_left">
       <ul>
