--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
@@ -54,6 +54,8 @@ Ext.onReady(function(){
 				"scoreUrl":scoreUrl
 		};
 		initializeEvaluateSystem(urlObject);
+		
+		
 	}
 	/*var urlObject = {
 		"getBatchListUrl":'/psc/ALTZDEV/EMPLOYEE/CRM/s/WEBLIB_TZ_PSXT.TZ_ZILIAO_PS.FieldFormula.IScript_ReadPSPCList?languageCd=ZHS',
@@ -66,6 +68,7 @@ Ext.onReady(function(){
 })
 
 $(function(){
+	$("#tz_evaluation_main").height(Ext.getBody().getHeight()-58-37);
 	$("#tz_zlps_container").width(Ext.getBody().getWidth()*3);
 });
 </script>
@@ -85,7 +88,7 @@ $(function(){
            </ul>           
 	</div>
   		<!-- evaluation main start -->
-		<div style="height:auto;overflow-x:hidden;margin:0px;position:relative">
+		<div id="tz_evaluation_main" style="height:100%;overflow-x:hidden;margin:0px;position:relative">
 			<div id="tz_zlps_loading" style="height:auto;width:100%;overflow:hidden;z-index:1600;background-color:#F4F4EC;position:absolute;bottom:40px;">
 				<div style="margin:auto; width:100%;height: 100%; text-align:center;line-height:500px;font-size:25px;font-family:Microsoft Yahei;">	
 					<p>欢迎登录清华经管学院MBA材料评审系统，数据加载中，请稍候……</p>
@@ -120,7 +123,7 @@ $(function(){
 								</table>
 							</div>
 						</td>
-						<td align="center" valign="top">
+						<td align="center" valign="top" style="width:1349px;">
 							<div id="tz_zlps_dfym" tztype="page" style="background-color:#F4F4EC;z-index:1000;list-style:none;width:100%;min-height:480px;float:left;overflow-x:hidden">
 								<table width="100%">
 									<tr>
@@ -136,12 +139,12 @@ $(function(){
 			</div>
 		</div>
 		<!-- evaluation main end -->
+		<div class="clear"></div>
+		<!-- foot start -->
+		<div id="footarea" class="footer assdiv" style="background-color:#fff;/*position:absolute;bottom:0;left:0*/">
+	  	<p>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</p>
+	    </div>
   </div>
 	<!-- content end --> 
-	<div class="clear"></div>
-	<!-- foot start -->
-	<div id="footarea" class="footer assdiv" style="background-color:#fff;position:absolute;bottom:0;left:0">
-  	<p>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</p>
-    </div>
 </div></body>
 </html>
