--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
@@ -54,12 +54,16 @@
 						<p>本科院校*</p>
 						<div class="overhidden" style="border-bottom: 1px solid #ddd;">
 							<input type="hidden" id="TZ_SCH_COUNTRY" name="TZ_SCH_COUNTRY" />
-							<input type="text" id="TZ_SCH_CNAME_Country"
-								name="TZ_SCH_CNAME_Country" placeholder="请选择所属国家" readonly="readonly">
+							<a  id="TZ_SCH_CNAME_Country" name="TZ_SCH_CNAME_Country" placeholder="请选择所属国家" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
+							<span style="color:#999" id=TZ_SCH_CNAME_Country>请选择所属国家</span></a>
+							<!-- <input type="text" id="TZ_SCH_CNAME_Country"
+								name="TZ_SCH_CNAME_Country" placeholder="请选择所属国家" readonly="readonly"> -->
 						</div>
 						<div class="overhidden">
-							<input type="text" name="TZ_SCH_CNAME" placeholder="请选择所属院校"
-								id="TZ_SCH_CNAME">
+						<a  id="TZ_SCH_CNAME" name="TZ_SCH_CNAME" placeholder="请选择所属院校" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
+							<span style="color:#999" id=TZ_SCH_CNAME>请选择所属院校</span></a>
+							<!-- <input type="text" name="TZ_SCH_CNAME" placeholder="请选择所属院校"
+								id="TZ_SCH_CNAME"> -->
 						</div>
 					</div>
 					<div class="register_body">
@@ -121,8 +125,10 @@
 					<div class="register_body">
 						<p>工作所在省市*</p>
 						<div class="overhidden">
-							<input type="text" name="" placeholder="工作所在省市" id="TZ_LEN_PROID"
-								name="TZ_LEN_PROID">
+						<a  id="TZ_LEN_PROID" name="TZ_LEN_PROID" placeholder="工作所在省市" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
+							<span style="color:#999" id=TZ_LEN_PROID>工作所在省市</span></a>
+							<!-- <input type="text" name="" placeholder="工作所在省市" id="TZ_LEN_PROID"
+								name="TZ_LEN_PROID"> -->
 						</div>
 					</div>
 					<div class="register_body">
