--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MREG_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MREG_HTML.html
@@ -1,14 +1,14 @@
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/css/website/m/css/style.css">
-<link rel="stylesheet" type="text/css"
-	href="%bind(:1)/statics/js/website/m/jquery-select2/3.4/select2.min.css">
+<!-- <link rel="stylesheet" type="text/css"
+	href="%bind(:1)/statics/js/website/m/jquery-select2/3.4/select2.min.css"> -->
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/website/m/jquery-1.8.3.min.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/website/m/rem.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/website/m/common.js"></script>
-<script type="text/javascript"
-	src="%bind(:1)/statics/js/website/m/jquery-select2/3.4/select2.min.js"></script>
+<!-- <script type="text/javascript"
+	src="%bind(:1)/statics/js/website/m/jquery-select2/3.4/select2.min.js"></script> -->
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/website/m/jeesite.min.js"></script>
 <script type="text/javascript"
