--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
@@ -3,14 +3,14 @@
 	<div class="topbar">
 		账户管理 <a href="javascript:void(0);" onclick="history.back(-1);"><i></i></a>
 	</div>
-	<div class="Tab_school">
+	 <div class="Tab_school"> 
 		<div class="tit_tab">
 			<li class="school_on">修改个人信息<img class="school_t"
 				src="%bind(:1)/statics/css/website/m/images/on.png"></li>
 			<li>修改密码<img class="school_t "
 				src="%bind(:1)/statics/css/website/m/images/on.png"></li>
 		</div>
-		<div class="tabN_school">
+		 <div class="tabN_school">
 			<div class="schooled">
 				<div class="account">
 					<div class="register_body">
@@ -54,14 +54,14 @@
 						<p>本科院校*</p>
 						<div class="overhidden" style="border-bottom: 1px solid #ddd;">
 							<input type="hidden" id="TZ_SCH_COUNTRY" name="TZ_SCH_COUNTRY" />
-							<a  id="TZ_SCH_CNAME_Country" name="TZ_SCH_CNAME_Country" placeholder="请选择所属国家" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
-							<span style="color:#999" id=TZ_SCH_CNAME_Country>请选择所属国家</span></a>
+							<div id="TZ_SCH_CNAME_Country" name="TZ_SCH_CNAME_Country" placeholder="请选择所属国家" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
+							<span style="color:#999" id=TZ_SCH_CNAME_Country>请选择所属国家</span></div>
 							<!-- <input type="text" id="TZ_SCH_CNAME_Country"
 								name="TZ_SCH_CNAME_Country" placeholder="请选择所属国家" readonly="readonly"> -->
 						</div>
 						<div class="overhidden">
-						<a  id="TZ_SCH_CNAME" name="TZ_SCH_CNAME" placeholder="请选择所属院校" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
-							<span style="color:#999" id=TZ_SCH_CNAME>请选择所属院校</span></a>
+						   <div id="TZ_SCH_CNAME" name="TZ_SCH_CNAME" placeholder="请选择所属院校" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;" >
+							<span style="color:#999" id=TZ_SCH_CNAME>请选择所属院校</span></div>
 							<!-- <input type="text" name="TZ_SCH_CNAME" placeholder="请选择所属院校"
 								id="TZ_SCH_CNAME"> -->
 						</div>
