活动报名样式修改

--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
@@ -69,6 +69,7 @@ body, button, input, select, textarea {
 .apply-items.inptype {
 	width: 320px; 
 	height: 29px;
+	line-height: 29px;
 } 
 
 .apply-items.seltype {
@@ -76,9 +77,9 @@ body, button, input, select, textarea {
 	height: 39px;
 }
 
-.apply-items:focus {
-	border-color: #95C8F1;
-	box-shadow: 0 0 4px #95C8F1;
+.apply-items.inptype:focus,.apply-items.seltype:focus {
+	border-color: #8f5dc0;
+	box-shadow: 0 0 1px #8f5dc0;
 }
 
 .apply-signin {
