--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -1072,6 +1072,7 @@
 													if (tzurl != "") {
 														window.location.href = tzurl;
 													//推荐信不需要刷新
+													}
 													//} else {
 													//	window.location.reload(); 
 													//}
@@ -1596,9 +1597,9 @@
 						//LoadWelcome("%bind(:11)", "%bind(:10)");
 					} 
 				}else{
-					$("#header").hide();
+					$("#headarea").hide();
 					$("#footer").hide();
-					$("#backindex").hide();
+					$("#footarea").hide();
 				}
 				if (tplType != "BMB") {
 					$("#app_download").hide();
