--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
@@ -46,14 +46,15 @@
 					<div class="register_body">
 						<p>出生日期*</p>
 						<div class="overhidden">
-							<input id="BIRTHDATE" name="BIRTHDATE" type="text" name=""
-								placeholder="YYYY-MM-DD">
+							<input id="BIRTHDATE" name="BIRTHDATE" type="text" name="" 
+							placeholder="YYYY-MM-DD"  readonly="readonly">
+								
 						</div>
 					</div>
 					<div class="register_body">
 						<p>本科院校*</p>
 						<div class="overhidden" style="border-bottom: 1px solid #ddd;">
-							<input type="hidden" id="TZ_SCH_COUNTRY" name="TZ_SCH_COUNTRY" />
+							<!-- <input type="hidden" id="TZ_SCH_COUNTRY" name="TZ_SCH_COUNTRY" /> -->
 							<div id="TZ_SCH_CNAME_Country" name="TZ_SCH_CNAME_Country" placeholder="请选择所属国家" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
 							<span style="color:#999" id=TZ_SCH_CNAME_Country>请选择所属国家</span></div>
 							<!-- <input type="text" id="TZ_SCH_CNAME_Country"
@@ -70,7 +71,7 @@
 						<p>本科毕业时间*</p>
 						<div class="overhidden">
 							<input type="text" name="" placeholder="YYYY-MM-DD"
-								id="TZ_COMMENT1" name="TZ_COMMENT1">
+								id="TZ_COMMENT1" name="TZ_COMMENT1" readonly="readonly">
 						</div>
 					</div>
 					<div class="register_body">
@@ -109,7 +110,7 @@
 						<p>最高学历毕业时间*</p>
 						<div class="overhidden">
 							<input type="text" name="" placeholder="YYYY-MM-DD"
-								id="TZ_COMMENT3" name="TZ_COMMENT3">
+								id="TZ_COMMENT3" name="TZ_COMMENT3" readonly="readonly">
 						</div>
 					</div>
 					<div class="register_body">
@@ -318,9 +319,10 @@
 		</div>
 	</div>
 </div>
-<div id="datePlugin"></div>
-<div class="shade"></div>
-<input type="hidden" id="ParamCon" name="ParamCon" />
+<!-- <div id="datePlugin"></div>>
+<div class="shade"></div> 
+
+<!-- <input type="hidden" id="ParamCon" name="ParamCon" /> -->
 <!-- <div class="country_pop" id="searchCountry"></div>
 <div class="school_pop" id="searchSchool"></div>
 <div class="country_pop" id="searchState"></div> -->
