--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
@@ -55,14 +55,14 @@
 						<p>本科院校*</p>
 						<div class="overhidden" style="border-bottom: 1px solid #ddd;">
 							<!-- <input type="hidden" id="TZ_SCH_COUNTRY" name="TZ_SCH_COUNTRY" /> -->
-							<div id="TZ_SCH_CNAME_Country" name="TZ_SCH_CNAME_Country" placeholder="请选择所属国家" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
-							<span style="color:#999" id=TZ_SCH_CNAME_Country>请选择所属国家</span></div>
+							<a id="TZ_SCH_CNAME_Country" name="TZ_SCH_CNAME_Country"  placeholder="请选择所属国家"  style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
+							<span style="color:#999" id=TZ_SCH_CNAME_Country>请选择所属国家</span></a>
 							<!-- <input type="text" id="TZ_SCH_CNAME_Country"
 								name="TZ_SCH_CNAME_Country" placeholder="请选择所属国家" readonly="readonly"> -->
 						</div>
 						<div class="overhidden">
-						   <div id="TZ_SCH_CNAME" name="TZ_SCH_CNAME" placeholder="请选择所属院校" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;" >
-							<span style="color:#999" id=TZ_SCH_CNAME>请选择所属院校</span></div>
+						   <a id="TZ_SCH_CNAME" name="TZ_SCH_CNAME" placeholder="请选择所属院校" style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;" >
+							<span style="color:#999" id=TZ_SCH_CNAME>请选择所属院校</span></a>
 							<!-- <input type="text" name="TZ_SCH_CNAME" placeholder="请选择所属院校"
 								id="TZ_SCH_CNAME"> -->
 						</div>
