--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
@@ -17,7 +17,9 @@
 	var TimeOut = %bind(:3);
 </script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/extjs/bootstrap.js"></script>
+<script type="text/javascript" src="%bind(:1)/statics/js/lib/extjs/ext-lang-zh_CN.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-migrate-1.2.1.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery-qtip/jquery.qtip.min.js"></script>
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/lib/jquery-qtip/jquery.qtip.min.css" />
 
