--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
@@ -81,6 +81,12 @@ var tzGeneralURL = "%bind(:1)";
 			$("#" + clickId).val(countryDesc);
 			$("#" + clickId).attr("ccode",countryCode);
 			$("#" + clickId).html(countryDesc);
+			$("#TZ_SCH_CNAME_Country_1").html(countryDesc);
+			console.log("#TZ_SCH_CNAME_Country_1");
+			console.log(countryDesc);
+			
+			$("#TZ_SCH_CNAME_Country_1").css("color","#333");
+			$("#" + clickId).html(countryDesc);
 			$("#" + clickId).css("color","#333");
 			
 			
