--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
@@ -154,6 +154,6 @@ var tzGeneralURL = "%bind(:1)";
 </div>
 <script type="text/javascript">
 	$(document).ready(function(){
-		$("#search-text").focus();
+		/* $("#search-text").focus(); */
 	})
 </script>
