--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MSCHOOL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MSCHOOL_SELECT.html
@@ -184,6 +184,6 @@ var tzGeneralURL = "%bind(:1)";
 <script type="text/javascript">
 	$(document).ready(function(){
 		setTab(1);
-		$("#search-text").focus();
+		/* $("#search-text").focus(); */
 	})
 </script>
