--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
@@ -4,6 +4,9 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
+<meta http-equiv="pragma" content="no-cache">  
+<meta http-equiv="Cache-Control" content="no-cache, must-revalidate">  
+<meta http-equiv="expires" content="0">
 <title>清华大学经济管理学院MBA面试评审系统</title>
 <style>
 	html,body{height:100%;overflow:hidden}
@@ -43,16 +46,16 @@ Ext.onReady(function(){
             }
         },this);
 	}else{		
-		var baseUrl = ContextPath+"/dispatcher?classid=material&OperateType=EJSON"
+		var baseUrl = ContextPath+"/dispatcher?classid=interview&OperateType=EJSON"
 		var urlObject = {
 				"getBatchListUrl":baseUrl+"&type=list",
 				"getBatchDataUrl":baseUrl+"&type=data",
-				"getNextApplicantUrl":baseUrl,
-				"getApplicantDataUrl":baseUrl,
-				"submitApplicantDataUrl":baseUrl,
+				"getNextApplicantUrl":baseUrl+"&type=next",
+				"getApplicantDataUrl":baseUrl+"&type=applicant",
+				"submitApplicantDataUrl":baseUrl+"&type=submit",
 				"printStatisticsTableUrl":baseUrl+"&type=print",
 				"getAddDelOneKsDataUrl":baseUrl,
-				"checkPWAccStateURL":baseUrl
+				"checkPWAccStateURL":baseUrl+"&type=check"
 		};
 		
 		initializeEvaluateSystem(urlObject);
@@ -71,6 +74,7 @@ Ext.onReady(function(){
 	*/
 })
 $(function(){
+	$("#tz_evaluation_main").height(Ext.getBody().getHeight()-58-37);
 	$("#tz_msps_container").width(Ext.getBody().getWidth()*3);
 });
 </script>
@@ -90,7 +94,7 @@ $(function(){
            </ul>           
 	</div>
   		<!-- evaluation main start -->
-		<div style="height:auto;overflow-x:hidden;margin:0px;position:relative">
+		<div id="tz_evaluation_main" style="height:auto;overflow-x:hidden;margin:0px;position:relative">
 			<div id="tz_msps_loading" style="height:auto;width:100%;overflow:hidden;z-index:1600;background-color:#F4F4EC;position:absolute;bottom:40px;">
 				<div style="margin:auto; width:100%;height: 100%; text-align:center;line-height:500px;font-size:25px;font-family:Microsoft Yahei;">	
 					<p>欢迎登录清华经管学院MBA面试评审系统，数据加载中，请稍候……</p>
@@ -100,7 +104,7 @@ $(function(){
 				<table width="100%" height="100%" style="background-color:#F4F4EC">
 					<tr>
 						<td align="center" valign="top">
-							<div id="tz_msps_pclb" tztype="page" style="background-color:#F4F4EC;z-index:1400;list-style:none;width:1070px;min-height:480px;float:left;overflow-x:hidden">
+							<div id="tz_msps_pclb" tztype="page" style="background-color:#F4F4EC;z-index:1400;list-style:none;width:100%;min-height:480px;float:left;overflow-x:hidden">
 								<table width="100%" height="100%">
 									<tr>
 										<td align="center" valign="top">
@@ -117,7 +121,7 @@ $(function(){
 										<td>
 											<table width="100%">
 												<tr>
-													<td><div id="tz_plps_main_page"></div></td>
+													<td><div id="tz_msps_main_page"></div></td>
 												</tr>
 											</table>
 										</td>
