--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
@@ -238,7 +238,7 @@ body, button, input, select, textarea {
 					<input class="btn apply-back" type="button" name="submit"
 						value="%bind(:10)" onclick="parent.tz_close_float_iframe_apply();" />
 					<input class="btn apply-submit" type="button" name="submit"
-						value="%bind(:11)" onclick="tz_apply_float_iframe_submit();" />
+						value="%bind(:11)" onclick="tz_apply_float_iframe_submit(this);" />
 				</div>
 			</form>
 		</div>
@@ -274,7 +274,7 @@ body, button, input, select, textarea {
 		}
 		//检查邮箱格式
 		function CheckMail(mail) {
-		 	var filter  = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+		 	var filter  = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})$/;
 		 	if (filter.test(mail)){ 
 				return true;
 		 	}else{
@@ -283,9 +283,7 @@ body, button, input, select, textarea {
 		}
 
 		/*提交事件*/
-		function tz_apply_float_iframe_submit() {
-			var self = this; 
-			
+		function tz_apply_float_iframe_submit(el) {
 			var allParam = $("input");
 			var selectParem = $("select");
 			
@@ -343,7 +341,6 @@ body, button, input, select, textarea {
 				return;
 			}
 			
-			$(this).unbind('click', tz_apply_float_iframe_submit);
 			$.ajax({
 				type : "POST",
 				url: applyURL,
@@ -357,17 +354,14 @@ body, button, input, select, textarea {
 					var bmrid = data.comContent.bmrid;
 					if (result == "1" || result == "2") {
 						alert(resultDesc);
-						$(self).click(tz_apply_float_iframe_submit);
 					} else {
 						alert(resultDesc);
-						$(self).click(tz_apply_float_iframe_submit);
 						parent.changebmzt(artid, bmrid); 
 						parent.tz_close_float_iframe_apply();
 					}
 				},
-				error : function(XMLHttpRequest, textStatus, errorThrown) {
-					$(self).click(tz_apply_float_iframe_submit);  
-					if (textStatus == "timeout") {
+				error : function(XMLHttpRequest, textStatus, errorThrown) {  
+					if (textStatus == "timeout") { 
 						alert("%bind(:5)");
 						return;
 					} else {
@@ -376,7 +370,6 @@ body, button, input, select, textarea {
 					}
 				}
 			});
-
 		}		
 	</script>
 </body>
