--- a/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_HTML.html
+++ b/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_HTML.html
@@ -138,11 +138,13 @@
 						
 						var pageCount = parseInt(data.total/15)+(data.total%15>0&&1||0)
 						//分页栏
-						var pageCountsHtml = '<li onclick="loadPage(1)">&lt;&lt;</li>';
+					    var prevPage = page-1;
+						var pageCountsHtml = '<li onclick="loadPage('+prevPage+')">&lt;&lt;</li>';
 						for(var i=1;i<=pageCount;i++){
 							pageCountsHtml = pageCountsHtml+'<li '+(i==page?'class="now"':'')+' onclick="loadPage('+i+')">'+i+'</li>';
 						}
-						var pageCountsHtml = pageCountsHtml+'<li onclick="loadPage('+pageCount+')">&gt;&gt;</li>';
+						var nextPage = page+1;
+						var pageCountsHtml = pageCountsHtml+'<li onclick="loadPage('+nextPage+')">&gt;&gt;</li>';
 
 						$("#pagecount").html(pageCountsHtml);
 						$("#nowpage").html(page);
