--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
@@ -20,7 +20,9 @@
 	var TimeOut = %bind(:3);
 </script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/extjs/bootstrap.js"></script>
+<script type="text/javascript" src="%bind(:1)/statics/js/lib/extjs/ext-lang-zh_CN.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery-migrate-1.2.1.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery-qtip/jquery.qtip.min.js"></script>
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/lib/jquery-qtip/jquery.qtip.min.css" />
 
@@ -46,7 +48,8 @@ Ext.onReady(function(){
             }
         },this);
 	}else{		
-		var baseUrl = ContextPath+"/dispatcher?classid=interview&OperateType=EJSON"
+		var baseUrl = ContextPath+"/dispatcher?classid=interview&OperateType=EJSON";
+		var scoreUrl = ContextPath+"/dispatcher";
 		var urlObject = {
 				"baseUrl":baseUrl,
 				"getBatchListUrl":baseUrl+"&type=list",
@@ -55,7 +58,8 @@ Ext.onReady(function(){
 				"submitApplicantDataUrl":baseUrl+"&type=submit",
 				"printStatisticsTableUrl":baseUrl+"&type=print",
 				"getAddDelOneKsDataUrl":baseUrl+"&type=applicant",
-				"checkPWAccStateURL":baseUrl+"&type=check"
+				"checkPWAccStateURL":baseUrl+"&type=check",
+				"scoreUrl":scoreUrl
 		};
 		
 		initializeEvaluateSystem(urlObject);
