--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
@@ -50,6 +50,7 @@
 			table img{vertical-align:middle}
 			p{margin:.5em 0}
 			.infobox{background-color:#e6e6e6;padding:24px;margin-top:40px;}
+			.charttitle{color:#626262;font-size:14px;margin-top:19px;}
 		</style>
 	
 		<!-- scripts for exporting chart as an image -->
