--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_HTML.html
@@ -1,13 +1,13 @@
 <div  style="width: 98%; border: 1px solid #E0E0E0; padding: 5px; margin-bottom: 10px">
-	<h3 style="text-align:left">%bind(:1)</h3>
+	<h3 style="text-align:left">%bind(:1):<span>%bind(:8)</span></h3>
 	
-	<h5 style="text-align:left">上一年%bind(:3)分布图：</h5>
+	<div class="charttitle">上一年%bind(:3)分布图：</div>
 	<div style="width:100%;height:420px;">
 		<div id="hischartdiv_%bind(:4)" style="width:48%;float:left;"></div>
 		<div id="hisserialdiv_%bind(:4)" style="width:48%;float:left;"></div>
 	</div>
 
-	<h5 style="text-align:left">已参加测试的%bind(:2)名考生的分布图：</h5>
+	<div class="charttitle">已参加测试的%bind(:2)名考生的分布图：</div>
 	<div style="width:100%;height:420px;">
 		<div id="chartdiv_%bind(:4)" style="width:48%;float:left;"></div>
 		<div id="serialdiv_%bind(:4)" style="width:48%;float:left;"></div>
