唐敏敏 20170414 清华mba修改

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_GRXX_INFO_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_GRXX_INFO_HTML.html
@@ -1,5 +1,5 @@
 <!--手机版首页个人信息区域-->
-<div class="personal_infor">
+<div class="personal_infor" style="width:100%;height:auto;background-color:#fff;overflow: hidden;padding-bottom: 10px;">
 	<div class="inner">
 	   	<!--  <div class="inner_img"></div>-->
 	   	<div style="width:24%;height:3.8rem;float:left;background:url(%bind(:7))no-repeat center center;background-size: 80%;"></div>
