--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_ZSJD_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_ZSJD_HTML.html
@@ -3,7 +3,7 @@
 	<div class="clearfix">
 	   	<div class="steps_tit">%bind(:1)</div>
 	   	<a href="%bind(:4)" class="steps_btn">%bind(:3)</a>
-	   	<a href="%bind(:6)" class="steps_btn">%bind(:5)</a>
+	   	<!-- <a href="%bind(:6)" class="steps_btn">%bind(:5)</a> -->
 	</div>
 	<div class="steps_mba">
 		%bind(:2)
