--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_HTML.html
@@ -39,7 +39,7 @@
 	<div class="viewport-adaptive">
 	   <div class="bg">
 	     <!-- 头部 -->
-	   	 <div class="topbar">我的 <a  href="javascript:history.back(-1);"><i></i></a>
+	   	 <div class="topbar">我的 <a  href="%bind(:11)"><i></i></a>
 	   	 </div>
 	   	 <div class="mine">
 	   	   <a href="%bind(:6)">
@@ -51,6 +51,12 @@
 	   	 	<a href="%bind(:7)">
 	   	 	  	 <i class="my_xx"></i>
 	   	 		 <span>系统站内信</span>
+	   	 		 <i class="arrow"></i>
+	   	 	</a>
+	   	 	
+	   	 	<a href="%bind(:10)">
+	   	 	  	 <i class="my_ls"></i>
+	   	 		 <span>查看历史报名</span>
 	   	 		 <i class="arrow"></i>
 	   	 	</a>
 	   	 </div>
