招生网站手机版站内信样式修改
Signed-off-by: 琚峰 <jufeng@tranzvision.com.cn>

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_SYSINFO_DIV.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_SYSINFO_DIV.html
@@ -1,9 +1,12 @@
-<div class="actions">
-	<p class="ac_time">%bind(:2)</p>
-	<div class="message_body">
-		<p id="%bind(:3)">%bind(:4)</p>
-		<P></P>
-		%bind(:5)
-		<a href="#" class="slide"  mailid ="%bind(:1)"><span>展开</span><i class="slide_down"></i></a>
-	</div>
+<div class="new_znx" style="background:#FFFFFF">
+	   	   <a href="%bind(:1)" class="viewZnxContent" mailid="%bind(:2)">
+	   	       <div class="newz_left">
+	   	       	    <p class="%bind(:3)">%bind(:4)</p>
+	   	       	    <div class="time_left" style="margin-bottom:2%;">
+		   	 			<i></i>
+		   	 			<span >%bind(:5)</span>
+	   	 		    </div>
+	   	       </div>
+	   	        <i class="arrow" style="margin:2.5% 0 2.5% 0;"></i>
+	   	   </a>
 </div>
