--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
@@ -54,7 +54,7 @@
 					<div class="register_body">
 						<p>本科院校*</p>
 						<div class="overhidden" style="border-bottom: 1px solid #ddd;">
-							<input type="hidden" id="TZ_SCH_COUNTRY" name="TZ_SCH_COUNTRY" /> -->
+							<input type="hidden" id="TZ_SCH_COUNTRY" name="TZ_SCH_COUNTRY" /> 
 							<!-- <a id="TZ_SCH_CNAME_Country" name="TZ_SCH_CNAME_Country"  placeholder="请选择所属国家"  style="width: 90%;float: left;border: none;height: 1rem;font-size: 0.54rem;color: #333;line-height: 1rem;margin-top: 2%;">
 							<span style="color:#999" id=TZ_SCH_CNAME_Country_1>请选择所属国家</span></a> -->
 							<input type="text" id="TZ_SCH_CNAME_Country"
