--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_ZSRL_LIST_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_ZSRL_LIST_HTML.html
@@ -1,7 +1,7 @@
 <div class="bg1">
 	 <!-- 头部 -->
 	 <div class="topbar">
-	   	 %bind(:1)<a href="javascript:history.back(-1);"><i></i></a>
+	   	 %bind(:1)<a href="%bind(:3)"><i></i></a>
 	 </div>
 	 <div class="ziliao">
 		%bind(:2)
