测测能否上清华

--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_M_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_M_HTML.html
@@ -1,4 +1,4 @@
-<div style="width:98%;border:1px solid #E0E0E0;padding:5px;margin-bottom: 10px">
+<div style="width:98%;border:1px solid #E0E0E0;padding:0 2px;margin-bottom: 10px;margin:0 auto;">
 	<h3 style="text-align:left">%bind(:1):<span>%bind(:8)</span></h3>
 	
 	<div class="charttitle">上一年%bind(:3)分布图：</div>
