--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
@@ -88,7 +88,7 @@
 			}
 		</script>
 	</head>
-	<body style="padding: 10px">
+	<body style="margin:0 auto;">
 		 %bind(:3)
 		 <div class="infobox" id="infoBoxDiv">
 		 	<!--  <input type="button" value="马上申请清华MBA" id="applyMBA" />
