测测上清华+招生网站登录页添加百度统计代码

--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MLOGIN.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MLOGIN.html
@@ -53,6 +53,15 @@
 				});
 			});
 		</script>
+		<script>
+			var _hmt = _hmt || [];
+			(function() {
+			  var hm = document.createElement("script");
+			  hm.src = "https://hm.baidu.com/hm.js?cda1b7baee67b76ffc0ec47ced60e717";
+			  var s = document.getElementsByTagName("script")[0]; 
+			  s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
 		<style type="text/css">
 			.login dd,dt{float:left}
 			.email{color:#FF0000;margin:0px 0px 0px 0px;padding-left:20px;background:url("%bind(:1)/statics/images/cantsinghua/i_error.gif") no-repeat scroll 0 0px rgba(0,0,0,0)}
