--- a/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
+++ b/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
@@ -18,7 +18,16 @@
 	var TZ_GD_LOGIN_SITEI_ORG_CODE = "%bind(:2)";
 	var TZ_GD_LOGIN_SITEI_ID = "%bind(:3)";
 	var TZ_GD_SITEI_ISD = "";
-</script>	
+</script>
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?cda1b7baee67b76ffc0ec47ced60e717";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+</script>
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/rem.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/common.js"></script>
