--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_DIG_TB_M_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_DIG_TB_M_HTML.html
@@ -1,5 +1,8 @@
 <div style="width:98%;border:1px solid #E0E0E0;padding:0 2px;margin-bottom:10px;margin:0 auto;">
 	<h3 style="text-align: left">%bind(:1):<font color=blue>%bind(:3)</font><span>%bind(:8)</span></h3>
+	<div  class="charttitle">
+	 %bind(:9)
+    </div>
 	<div class="charttitle">已参加测试的%bind(:2)名考生的分布图：</div>
 	<div id="chartdiv_%bind(:4)" style="width:100%;height:260px;"></div>
 	<div id="serialdiv_%bind(:4)" style="width:100%;height:260px;"></div>
