完善信息页，更改页面按钮文字及密码格式不符合要求修改

--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MPERFECT_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MPERFECT_HTML.html
@@ -136,7 +136,7 @@
 				<p id="yzm_Emailstatus" class="reg_tips"></p>	
 			</form>		
 		</div>
-		<a href="javascript:void(0)" class="register_btn" id="submitbutton">补充个人信息</a>
+		<a href="javascript:void(0)" class="register_btn" id="submitbutton">确定</a>
 	</div>
 </div>
 <!-- <div class="shade"></div> -->
