--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_HTML.html
@@ -71,8 +71,9 @@
 			     </div>
 			</div>
 	  	<div class="main_full_line">
-				<div class="bt_mregister" id="submitbutton"><span style="color:#FFFFFF">补充个人信息</span></div>
-</div>
+				<!-- <div class="bt_mregister" id="submitbutton"><span style="color:#FFFFFF">补充个人信息</span></div> -->
+				<div class="bt_mpeferct" id="submitbutton"><span style="color:#FFFFFF">补充个人信息</span></div>
+		</div>
 		</div>
 
 		<div class="main_full_foot"></div>
